<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_design"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/img"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/image_icon"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:textSize="20sp"
        android:text="@string/please_select_your_language"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="220dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/you_can_change_the_language_at_any_time"
            android:layout_gravity="center"
            android:layout_margin="16dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="220dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_spiner"
            />
        <Button
            android:id="@+id/next"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:layout_margin="32dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>